[package]
name = "async-executor"
version = "0.1.0"
edition = "2021"
license = "BSL-1.0"

[dependencies]
defmt = "=0.3.6"
defmt-rtt = "=0.4.0"
critical-section = { version = "=1.1.2", features = ["restore-state-bool"] }
# heapless for statically allocated containers
heapless = "0.8.0"
# concate identifiers in macros
paste = "1.0.15"
# used by embassy-sync
futures-util = { version = "0.3.17", default-features = false }
# allow format string without std library
format_no_std = "1.1.0"

[dependencies.bw-r-drivers-tc37x]
registry = "bluewind"
path = "../bw-r-drivers-tc37x"
version = "0.2.0"
features = ["log_with_defmt"]
